--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,29 @@
 <html>
-	<Title> Laxantes </title>
-	<head profile="http://www.w3.org/2005/10/profile">
+	<Title> Drogueria PPs Bienvenidos! </title>
+	<head  profile="http://www.w3.org/2005/10/profile">
 		<link rel="icon" type="image/png" href="../9.png">
 		<link rel="stylesheet" type="text/css" href="../Style.css"> 
-		<a href="Index.html">
-			<IMG SRC="../2.png" height = 70 width= 170 Hspace = 10 Vspace = 1 >
-		</a>
-		<marquee  width = 75% height = "60" behavior=slide aling=top scrollamount = 10 bgcolor = red> 
-			<font face = "Verdana", size = 20 , color = white>  Droger&iacutea PPs 
-			</font>
+		<a href="Index.html"><IMG SRC="../2.png" height = 70 width= 170 Hspace = 10 Vspace = 1 > </a>
+		<marquee  width = 65% height = "60" behavior=slide aling=top scrollamount = 10 bgcolor = red> 
+			<font face = "Verdana", size = 20 , color = white>  Droger&iacutea PPs </font>
 		</marquee>
-		<hr style="border: 2px solid #791DD5; background-color:#286F2C; height: 5px; width: 90%; margin: 0 auto;">
-		</hr>
-		<center>
+		<font face="Comic Sans Ms" color="44D024" size="3"
+		>
+		<body link=green vlink=green alink=green>
+		<a href="Administrador.html"><right>Iniciar Sesi&oacuten</right></a> | <a href="Registro.php"><right>Registrarse</right></a>
+		</font>
+		<hr style="border: 2px solid #791DD5; background-color:#286F2C; height: 5px; width: 90%; margin: 0 auto;"> </hr>
+		<center> 
 			<marquee width = 70% height = "30" SCROLLAMOUNT = 10 bgcolor = "F3EAEA" direction = left> 
-				<font face = "Verdana", size = 5 , color = black> LAXANTES 
-				</font> 
+				<font face = "Verdana", size = 5 , color = black>  Todo lo que busca en un solo lugar </font> 
 			</marquee>
 		</center>
 	</head>
 
-	<Body background = "../8.PNG">
-		<form method=GET action="http://www.google.com/search">
+	<Body background = "..\1.png">
+		<form method=GET action="https://www.google.com/search">
 			<TABLE  align =left style="position:absolute;top:135px;right:200px;"  ><tr><td>
-				<A HREF="http://www.google.com/">
+				<A HREF="https://www.google.com/webhp?hl=es">
 					<IMG SRC="http://img.deusm.com/informationweek/2015/09/1322015/logo_420_color_2x.png" border="0" ALT="Google" align="absmiddle" height= 80 width = 100>
 				</A>
 				<INPUT TYPE=text name=q size=20 maxlength=255 value="">
@@ -35,13 +35,13 @@
 		<br>
 		<div id = "header">
 			<ul class = "nav">
-				<li><a href="Index.html">Inicio </a></li>
+				<li><a href="">Inicio </a></li>
 				<li><a href="">Medicamentos </a>
 						<ul>
 							<li><a href="Mucoliticos.html">Mucol&iacuteticos </a></li>
-							<li><a href="Analgesicos.html">Analgesicos </a></li>
-							<li><a href="Antibioticos.html">Antibioticos </a></li>
-							<li><a href="Anticepticos.html">Anticepticos </a></li>
+							<li><a href="Analgesicos.html">Analg&eacutesicos </a></li><li><a href="Antibioticos.html">Antibi&oacuteticos </a></li>
+							<li><a href="Anticepticos.html">Antic&eacutepticos </a></li>
+							<li><a href="Laxantes.html">Laxantes </a></li>
 							<li><a href="Antihistaminicos.html">Antihistam&iacutenicos </a></li>
 							<li><a href="Broncodilatadores.html">Broncodilatadores </a></li>				
 						</ul>
@@ -66,5 +66,11 @@
 					<li><a href="Contacto.html">Contacto </a></li>
 			</ul>
 		</div>
+		<br>
+		<br>
+		<br>
+		<center>
+			<IMG SRC="../3.gif" height = 400 width= 990>
+		</center>	
 	</body>
 </html>
